added Manuel to authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 A. Murat Eren <a.murat.eren@gmail.com>
-Jonathan Brown <johhnybrown7@gmail.com>
+Jonathan Brown <johnnybrown7@gmail.com>
+Manuel Zubieta <mazubieta@gmail.com>
 
